--- a/MVC_RepositoryPattern/FortBase/FortBase.Web/Views/Home/Index.cshtml
+++ b/MVC_RepositoryPattern/FortBase/FortBase.Web/Views/Home/Index.cshtml
@@ -1,13 +1,8 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-@*<script src="~/lib/jquery/dist/jquery.js"></script>*@
-<script src="~/js/user_manager.js"></script>
 
 <div class="text-center">
     <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
-<div>
-    <button onclick="clickMe()">Click me</button>
+    <p>Your easy .Net Core Template Generator with your favourite patterns.</p>
 </div>
